--- a/angular-project/package.json
+++ b/angular-project/package.json
@@ -39,6 +39,7 @@
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
+    "karma-firefox-launcher": "^2.1.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "msw": "^0.39.2",
